fixed grid spacing and made overlay gradient on tile hover more subtle

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -12,9 +12,9 @@ nav {
 
     border-radius: 30px;
     border: 1px solid rgba(203, 203, 203, 0.52);    
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-    backdrop-filter: saturate(180%) blur(20px);
-    background: rgba(255, 255, 255, 0.77);
+    -webkit-backdrop-filter: saturate(180%) blur(15px);
+    backdrop-filter: saturate(180%) blur(15px);
+    background: rgba(238, 238, 238, 0.7);
     
 }
 
@@ -44,7 +44,7 @@ nav {
 }
 
 .navlink:hover {
-    background: var(--BW-10);
+    background: rgba(255, 255, 255, 0.30);
     outline: .8px solid var(--BW-00);
 }
 
