--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ header {
   
 .tile-1 { 
     grid-area: tile-1;
-    height: calc(((100dvh - 66px) * 0.33) - 24px);
+    height: calc(((100dvh - 66px) * 0.33) - 22px);
     min-height: 215px;
     max-height: 480px;
     display: flex;
@@ -162,20 +162,19 @@ header {
     display: flex;
     background-color: var(--BW-10);
     border-radius: 20px;
-    transform: scale(.98);
     overflow: hidden;
 }
   
 .tile-2 { 
     grid-area: tile-2;
-    height: calc(((100dvh - 66px) * 0.33) - 24px);
+    height: calc(((100dvh - 66px) * 0.33) - 22px);
     min-height: 215px;
     max-height: 480px;
 }
   
 .tile-3 {  
     grid-area: tile-3;
-    height: calc(((100dvh - 66px) * 0.66) - 24px);
+    height: calc(((100dvh - 66px) * 0.66) - 22px);
     min-height: 446px;
     max-height: 976px;
 
@@ -183,77 +182,77 @@ header {
 
 .tile-4 { 
     grid-area: tile-4;
-    height: calc(((100dvh - 66px) * 0.66) - 24px);
+    height: calc(((100dvh - 66px) * 0.66) - 22px);
     min-height: 446px;
     max-height: 976px;
 }
 
 .tile-5 { 
     grid-area: tile-5;
-    height: calc(((100dvh - 66px) * 0.33) - 21.33px);
+    height: calc(((100dvh - 66px) * 0.33) - 20px);
     min-height: 215px;
     max-height: 480px;
 }
 
 .tile-6 { 
     grid-area: tile-6;
-    height: calc(((100dvh - 66px) * 0.33) - 21.33px);
+    height: calc(((100dvh - 66px) * 0.33) - 20px);
     min-height: 215px;
     max-height: 480px;
 }
 
 .tile-7 { 
     grid-area: tile-7;
-    height: calc(((100dvh - 66px) * 0.33) - 21.33px);
+    height: calc(((100dvh - 66px) * 0.33) - 20px);
     min-height: 215px;
     max-height: 480px;
 }
 
 .tile-8 { 
     grid-area: tile-8;
-    height: calc(((100dvh - 66px) * 0.33) - 24px);
+    height: calc(((100dvh - 66px) * 0.33) - 22px);
     min-height: 215px;
     max-height: 480px;
 }
 
 .tile-9 {  
     grid-area: tile-9;
-    height: calc(((100dvh - 66px) * 0.66) - 24px);
+    height: calc(((100dvh - 66px) * 0.66) - 22px);
     min-height: 446px;
     max-height: 976px;
 }
 
 .tile-10 {  
     grid-area: tile-10;
-    height: calc(((100dvh - 66px) * 0.66) - 24px);
+    height: calc(((100dvh - 66px) * 0.66) - 22px);
     min-height: 446px;
     max-height: 976px;
 }
 
 .tile-11 { 
     grid-area: tile-11;
-    height: calc(((100dvh - 66px) * 0.33) - 21.33px);
+    height: calc(((100dvh - 66px) * 0.33) - 20px);
     min-height: 215px;
     max-height: 480px;
 }
 
 .tile-12 { 
     grid-area: tile-12;
-    height: calc(((100dvh - 66px) * 0.33) - 21.33px);
+    height: calc(((100dvh - 66px) * 0.33) - 22px);
     min-height: 215px;
     max-height: 480px;
 }
 
 .tile-13 { 
     grid-area: tile-13;
-    height: calc(((100dvh - 66px) * 0.33) - 24px);
+    height: calc(((100dvh - 66px) * 0.33) - 22px);
     min-height: 215px;
     max-height: 480px;
 }
 
 .tile-14 { 
     grid-area: tile-14;
-    height: calc(((100dvh - 66px) * 0.33) - 24px);
+    height: calc(((100dvh - 66px) * 0.33) - 22x);
     min-height: 215px;
     max-height: 480px;
 }
@@ -292,8 +291,9 @@ header {
 }
 
 .wednesday_sessions-hero {
-    background: url(/assets/img/projects/wednesday-sessions/wednesday-sessions-2.png);
+    background: url(/assets/img/projects/wednesday-sessions/wednesday-sessions-4.png);
     background-position: center;
+    background-color: rgb(225, 225, 225);
 }
 
 .cohen_leigh-hero {
@@ -334,7 +334,7 @@ header {
     box-sizing: border-box;
    
     opacity: 0;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.00) 50%, rgba(0, 0, 0, 0.50) 80%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.10) 40%, rgba(0, 0, 0, 0.60) 100%);
     transition: opacity .4s ease;
 
 
